Fix progress item position (first & last one) to be aligned with the content

--- a/app/assets/stylesheets/components/progress_pages.scss
+++ b/app/assets/stylesheets/components/progress_pages.scss
@@ -31,12 +31,14 @@
 .progress-pages-container .progress-item:first-of-type {
     & > div {
         align-items: start;
+        left: 0;
     }
 }
 
 .progress-pages-container .progress-item:last-of-type {
     & > div {
         align-items: end;
+        left: -23px;
     }
 }
 
